# bananagrams

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_QUALITY_SETUP.md  Dockerrun.aws.json  FRONTEND_CODE_REVIEW.md  Makefile  Procfile  README.md  app.py  cdk.py  dev-requirements.txt  docker-compose.yml  game.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  util.ps1
.github/workflows/: backend_test.yml  build_and_deploy.yml  test.yml
backend/: BACKEND_CODE_REVIEW.md  Dockerfile  app.py  game.py  pyproject.toml  setup.cfg  test_mode_example.py
backend/cdk/: cdk.py
backend/static/scripts/: board.js
backend/templates/: game.html
backend/tests/: test_app.py  test_game.py
frontend/: .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  README.md  angular.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/cdk/: cdk.py
frontend/src/: App.vue  env.d.ts  index.html  main.ts  styles.scss
frontend/src/app/: app-routing.module.ts  app.actions.ts  app.component.html  app.component.scss  app.component.ts  app.config.ts  app.module.ts  app.reducer.ts  app.routes.ts  app.state.ts  constants.ts  interfaces.ts  models.ts
frontend/src/app/actions/: game.actions.ts
frontend/src/app/components/: index.ts
frontend/src/app/components/bench/: bench.component.html  bench.component.scss  bench.component.spec.ts  bench.component.ts
frontend/src/app/components/board/: board.component.html  board.component.scss  board.component.spec.ts  board.component.ts
frontend/src/app/components/cell/: cell.component.html  cell.component.scss  cell.component.spec.ts  cell.component.ts
frontend/src/app/components/game/: game.component.html  game.component.scss  game.component.spec.ts  game.component.ts
frontend/src/app/components/gameover/: gameover.component.html  gameover.component.scss  gameover.component.spec.ts  gameover.component.ts
frontend/src/app/components/landing/: landing.component.html  landing.component.scss  landing.component.spec.ts  landing.component.ts
frontend/src/app/components/lobby/: lobby.component.html  lobby.component.scss  lobby.component.spec.ts  lobby.component.ts
frontend/src/app/components/menu-gameplay/: menu-gameplay.component.html  menu-gameplay.component.scss  menu-gameplay.component.spec.ts  menu-gameplay.component.ts
frontend/src/app/components/modal/: modal.component.html  modal.component.scss  modal.component.spec.ts  modal.component.ts
frontend/src/app/components/pagenotfound/: pagenotfound.component.html  pagenotfound.component.scss  pagenotfound.component.spec.ts  pagenotfound.component.ts
frontend/src/app/components/tile/: tile.component.html  tile.component.scss  tile.component.spec.ts  tile.component.ts
frontend/src/app/constants/: index.ts  misc-constants.ts  routes-constants.ts
frontend/src/app/models/: components.ts  endpoints.ts  index.ts  models.ts  userData.ts
frontend/src/app/reducers/: game.reducer.ts
frontend/src/app/router-store/reducers/: index.ts
frontend/src/app/services/: api.service.ts  error.service.ts  event-handle.service.spec.ts  event-handle.service.ts  helper.service.ts  message-bus.service.ts  render.service.ts  socket.service.ts
frontend/src/app/store/actions/: game.actions.ts  index.ts  user.actions.ts
frontend/src/app/store/effects/: game.effect.ts  game.effects.ts  index.ts  user.effect.ts  user.effects.ts
frontend/src/app/store/reducers/: game.reducer.ts  index.ts  router.reducer.ts  user.reducer.ts
frontend/src/app/store/selectors/: gameData.selectors.ts  index.ts  router.selectors.ts  userData.selectors.ts
frontend/src/app/unit tests/: api.service.spec.ts  error.service.spec.ts  event-handle.service.spec.ts  helper.service.spec.ts  message-bus.service.spec.ts  socket.service.spec.ts
frontend/src/components/__tests__/: placeholder.test.ts
frontend/src/components/common/: GameModal.vue
frontend/src/components/game/: BoardCell.vue  GameBench.vue  GameBoard.vue  GameControls.vue  GameTile.vue
frontend/src/composables/: useDragDrop.ts  useErrorHandler.ts  useGameLogic.ts  useValidation.ts
frontend/src/composables/__tests__/: useValidation.spec.ts
frontend/src/environments/: environment.prod.ts  environment.production.ts  environment.ts
frontend/src/models/: models.ts
frontend/src/router/: index.ts
frontend/src/stores/: board.ts  game.ts  player.ts  socket.ts  ui.ts
frontend/src/styles/: main.scss
frontend/src/types/: index.ts
frontend/src/utils/: logger.ts  route.ts
frontend/src/views/: GameOverView.vue  GameView.vue  LandingView.vue  LobbyView.vue  NotFoundView.vue
scripts/: build_frontend.ps1
static/scripts/: board.js  package-lock.json  populate.js  tsconfig.json  webpack.config.js
static/scripts/js/: board.js  socket.js
static/scripts/ts/: board.ts  events.ts  helpers.ts  render.ts  socket.ts
static/styles/css/: PLACEHOLDER  board.css  game.css  loading.css  normalize.css  styles.css  styles.css.map
static/styles/scss/: board.scss  game.scss  loading.scss  normalize.scss  styles.scss
templates/: board.html  game.html  index.html  lobby.html
tests/: test_app.py  test_game.py
