[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "jsonschema>=4.25.0",
    "simplejson>=3.20.1",
    "gunicorn>=20.1.0",
    "eventlet>=0.33.0",
]

[tool.setuptools]
py-modules = ["app", "game"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-xdist>=3.3.1",
    "coverage>=7.3.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.12.7",
]
